--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -23,10 +23,10 @@
 			
 			<div class="collapse navbar-collapse" id="navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="{% url 'index' %}">Hem</a></li>
+					<li {% if request.path == '/' %}class="active"{% endif %}><a href="{% url 'index' %}">Hem</a></li>
 					{% regroup booru_pools by start_date.year as year_pools %}
 					{% for year in year_pools %}
-					<li class="dropdown">
+					<li class="dropdown {% if active_year == year.grouper %}active{% endif %}">
 						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ year.grouper }} <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
 							{% for pool in year.list %}
