--- a/alboard2/alboard2/templates/index.html
+++ b/alboard2/alboard2/templates/index.html
@@ -2,6 +2,6 @@
 {% block title %}Start{% endblock %}
 {% block content %}
 	<p>
-		Lorem ipsum dolor sit amet
+		To customize this page, open the admin panel, and add a page with the URL <code>/</code>.
 	</p>
 {% endblock %}
