--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -1,4 +1,5 @@
-{% load bootstrap3 staticfiles %}
+{% load bootstrap3 staticfiles flatpages %}
+{% get_flatpages for user as flatpages %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,7 +24,11 @@
 			
 			<div class="collapse navbar-collapse" id="navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li {% if request.path == '/' %}class="active"{% endif %}><a href="{% url 'index' %}">Hem</a></li>
+					{% for page in flatpages %}
+						<li {% if request.path == page.url %}class="active"{% endif %}><a href="{{ page.url }}">{{ page.title }}</a></li>
+					{% empty %}
+						<li {% if request.path == '/' %}class="active"{% endif %}><a href="{% url 'index' %}">Home</a></li>
+					{% endfor %}
 					{% regroup booru_pools by start_date.year as year_pools %}
 					{% for year in year_pools %}
 					<li class="dropdown {% if active_year == year.grouper %}active{% endif %}">
