--- a/alboard2/alboard2/templates/booru/post_detail.html
+++ b/alboard2/alboard2/templates/booru/post_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% load markdown_deux_tags %}
-{% block title %}Bild | {{ object.pool.name }}{% endblock %}
+{% load markdown_deux_tags i18n %}
+{% block title %}{% trans "Picture" %} | {{ object.pool.name }}{% endblock %}
 {% block body_class %}has-bottom-bar{% endblock %}
 {% block content %}
 	<div class="col-xs-12">
@@ -12,7 +12,7 @@
 				</div>
 				<div class="meta small">
 					<span class="pull-left"><i class="glyphicon glyphicon-time"></i> {{ object.created_at }}</span>
-					<span class="pull-right"><i class="glyphicon glyphicon-user"></i> {{ object.signature|default:"Anonym" }}</span>
+					<span class="pull-right"><i class="glyphicon glyphicon-user"></i> {{ object.signature|default:_("Anonymous") }}</span>
 				</div>
 			</div>
 		</a>
@@ -21,7 +21,7 @@
 		<ul class="nav navbar-nav">
 			{% with object.prev_post as p %}
 				<li class="prev-button {% if not p %}disabled{% endif %}">
-					<a {% if p %}href="{% url 'post' p.pool.id p.id %}"{% endif %}><span aria-hidden="true">&larr;</span>&nbsp;Previous</a>
+					<a {% if p %}href="{% url 'post' p.pool.id p.id %}"{% endif %}><span aria-hidden="true">&larr;</span>&nbsp;{% trans "Previous" %}</a>
 				</li>
 			{% endwith %}
 			
@@ -29,7 +29,7 @@
 			
 			{% with object.next_post as p %}
 				<li class="next-button {% if not p %}disabled{% endif %}">
-					<a {% if p %}href="{% url 'post' p.pool.id p.id %}"{% endif %}>Next&nbsp;<span aria-hidden="true">&rarr;</span></a>
+					<a {% if p %}href="{% url 'post' p.pool.id p.id %}"{% endif %}>{% trans "Next" %}&nbsp;<span aria-hidden="true">&rarr;</span></a>
 				</li>
 			{% endwith %}
 		</ul>
