--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 staticfiles flatpages %}
+{% load bootstrap3 staticfiles flatpages i18n %}
 {% get_flatpages for user as flatpages %}
 <!DOCTYPE html>
 <html>
@@ -14,7 +14,7 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
+					<span class="sr-only">{% trans "Toggle navigation" %}</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -27,7 +27,7 @@
 					{% for page in flatpages %}
 						<li {% if request.path == page.url %}class="active"{% endif %}><a href="{{ page.url }}">{{ page.title }}</a></li>
 					{% empty %}
-						<li {% if request.path == '/' %}class="active"{% endif %}><a href="{% url 'index' %}">Home</a></li>
+						<li {% if request.path == '/' %}class="active"{% endif %}><a href="{% url 'index' %}">{% trans "Home" %}</a></li>
 					{% endfor %}
 					{% regroup booru_pools by start_date.year as year_pools %}
 					{% for year in year_pools %}
@@ -38,7 +38,7 @@
 							<li><a href="{% url 'pool' pool.id %}">{{ pool.name }} <small class="text-muted">({{ pool.start_date }}{% if pool.start_date != pool.end_date %} - {{ pool.end_date }}{% endif %})</small></a></li>
 							{% endfor %}
 							<li class="divider"></li>
-							<li><a href="#">Ny händelse...</a></li>
+							<li><a href="#">{% trans "New Event" %}</a></li>
 						</ul>
 					</li>
 					{% endfor %}
