--- a/alboard2/alboard2/static/style.css
+++ b/alboard2/alboard2/static/style.css
@@ -8,7 +8,7 @@ body.has-bottom-bar {
 .navbar-default {
 	background-color: rgba(248, 248, 248, 0.85);
 }
-.navbar-default .navbar-nav > .active > a {
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover {
 	background-color: rgba(231, 231, 231, 0.5);
 }
 
