--- a/alboard2/alboard2/static/style.css
+++ b/alboard2/alboard2/static/style.css
@@ -8,8 +8,13 @@ body.has-bottom-bar {
 .navbar-default {
 	background-color: rgba(248, 248, 248, 0.85);
 }
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover {
-	background-color: rgba(231, 231, 231, 0.5);
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus,
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+	background-color: rgba(200, 200, 200, 0.5);
 }
 
 .navbar-justified .navbar-nav {
