--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="{% bootstrap_css_url %}" />
 	<link rel="stylesheet" href="{% static 'style.css' %}" />
+	{% block after_head %}{% endblock %}
 </head>
 <body class="{% block body_class %}{% endblock %}">
 	<nav class="navbar navbar-fixed-top navbar-default">
@@ -54,5 +55,6 @@
 	
 	<script src="//code.jquery.com/jquery.min.js"></script>
 	<script src="{% bootstrap_javascript_url %}"></script>
+	{% block after_body %}{% endblock %}
 </body>
 </html>
