--- a/alboard2/alboard2/static/style.css
+++ b/alboard2/alboard2/static/style.css
@@ -5,18 +5,6 @@ body.has-bottom-bar {
 	padding-bottom: 40px;
 }
 
-.navbar-default {
-	background-color: rgba(248, 248, 248, 0.85);
-}
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus,
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:hover,
-.navbar-default .navbar-nav > .open > a:focus {
-	background-color: rgba(200, 200, 200, 0.5);
-}
-
 .navbar-justified .navbar-nav {
 	margin: 0 auto;
 	display: table;
@@ -51,4 +39,19 @@ body.has-bottom-bar {
 .thumbnail:hover {
 	border: 1px solid #333;
 	text-decoration: none;
+}
+
+
+@media(min-width: 768px) {
+	.navbar-default {
+		background-color: rgba(248, 248, 248, 0.85);
+	}
+	.navbar-default .navbar-nav > .active > a,
+	.navbar-default .navbar-nav > .active > a:hover,
+	.navbar-default .navbar-nav > .active > a:focus,
+	.navbar-default .navbar-nav > .open > a,
+	.navbar-default .navbar-nav > .open > a:hover,
+	.navbar-default .navbar-nav > .open > a:focus {
+		background-color: rgba(200, 200, 200, 0.5);
+	}
 }
