WASD and JK navigation

--- a/alboard2/alboard2/templates/booru/post_detail.html
+++ b/alboard2/alboard2/templates/booru/post_detail.html
@@ -42,10 +42,14 @@
 			// tab cycling or the like - only lone arrow key presses
 			if(e.altKey || e.ctrlKey || e.metaKey || e.shiftKey)
 				return;
-			else if(e.which == 37)
+			else if(e.which == 37 || e.which == 65) // Arrow Left, A
 				$('#go-prev')[0].click();
-			else if(e.which == 39)
+			else if(e.which == 39 || e.which == 68) // Arrow Right, D
 				$('#go-next')[0].click();
+			else if(e.which == 87 || e.which == 75) // W, K
+				window.scrollBy(0, -50);
+			else if(e.which == 83 || e.which == 74) // S, J
+				window.scrollBy(0, 50);
 			else
 				return;
 			e.preventDefault();
