Some spacing between caption and footer

--- a/alboard2/alboard2/static/style.css
+++ b/alboard2/alboard2/static/style.css
@@ -41,6 +41,10 @@ body.has-bottom-bar {
 	text-decoration: none;
 }
 
+.thumbnail .description {
+	margin-bottom: 25px;
+}
+
 
 @media(min-width: 768px) {
 	.navbar-default {
