--- a/alboard2/alboard2/templates/booru/post_detail.html
+++ b/alboard2/alboard2/templates/booru/post_detail.html
@@ -10,7 +10,7 @@
 				<div class="description">
 					{{ object.description|markdown|default:"<p></p>" }}
 				</div>
-				<div class="meta small">
+				<div class="meta">
 					<span class="pull-left"><i class="glyphicon glyphicon-time"></i> {{ object.created_at }}</span>
 					<span class="pull-right"><i class="glyphicon glyphicon-user"></i> {{ object.signature|default:_("Anonymous") }}</span>
 				</div>
