New Event-link when there are none

--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -40,6 +40,8 @@
 							<li><a href="#">{% trans "New Event" %}</a></li>
 						</ul>
 					</li>
+					{% empty %}
+					<li><a href="#">{% trans "New Event" %}</a></li>
 					{% endfor %}
 				</ul>
 			</div>
