--- a/alboard2/alboard2/templates/booru/post_detail.html
+++ b/alboard2/alboard2/templates/booru/post_detail.html
@@ -19,17 +19,15 @@
 	</div>
 	<nav class="navbar navbar-fixed-bottom navbar-default navbar-justified">
 		<ul class="nav navbar-nav">
-			{% with object.prev_post as p %}
-				<li class="prev-button {% if not p %}disabled{% endif %}">
-					<a {% if p %}href="{% url 'post' p.pool.id p.id %}"{% endif %} id="go-prev"><span aria-hidden="true">&larr;</span>&nbsp;{% trans "Previous" %}</a>
-				</li>
-			{% endwith %}
+			<li class="prev-button {% if not object.prev_post %}disabled{% endif %}">
+				<a {% if object.prev_post %}href="{% url 'post' object.prev_post.pool.id object.prev_post.id %}"{% endif %} id="go-prev"><span aria-hidden="true">&larr;</span>&nbsp;{% trans "Previous" %}</a>
+			</li>
 			
 			<li><a href="{% url 'pool' object.pool.id %}">{{ object.pool.name }}</a></li>
 			
 			{% with object.next_post as p %}
 				<li class="next-button {% if not p %}disabled{% endif %}">
-					<a {% if p %}href="{% url 'post' p.pool.id p.id %}"{% endif %} id="go-next">{% trans "Next" %}&nbsp;<span aria-hidden="true">&rarr;</span></a>
+					<a {% if object.next_post %}href="{% url 'post' object.next_post.pool.id object.next_post.id %}"{% endif %} id="go-next">{% trans "Next" %}&nbsp;<span aria-hidden="true">&rarr;</span></a>
 				</li>
 			{% endwith %}
 		</ul>
