--- a/alboard2/alboard2/templates/booru/pool_detail.html
+++ b/alboard2/alboard2/templates/booru/pool_detail.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load thumbnail markdown_deux_tags %}
-{% block title %}{{ object.name }}{% endblock %}
+{% block title %}{{ pool.name }}{% endblock %}
 {% block content %}
-	{% for post in object.post_set.all %}
+	{% for post in pool.post_set.all %}
 		<div class="col-xs-6 col-sm-3 col-md-2">
 			<a href="{{ post.get_absolute_url }}" class="thumbnail">
 				{% thumbnail post.image "200x200" crop='center' as thumb %}
