--- a/alboard2/alboard2/templates/booru/post_detail.html
+++ b/alboard2/alboard2/templates/booru/post_detail.html
@@ -1,33 +1,33 @@
 {% extends 'base.html' %}
 {% load markdown_deux_tags i18n %}
-{% block title %}{% trans "Picture" %} | {{ object.pool.name }}{% endblock %}
+{% block title %}{% trans "Picture" %} | {{ pool.name }}{% endblock %}
 {% block body_class %}has-bottom-bar{% endblock %}
 {% block content %}
 	<div class="col-xs-12">
 		<a class="thumbnail">
-			<img src="{{ object.image.url }}" />
+			<img src="{{ post.image.url }}" />
 			<div class="caption clearfix">
 				<div class="description">
-					{{ object.description|markdown|default:"<p></p>" }}
+					{{ post.description|markdown|default:"<p></p>" }}
 				</div>
 				<div class="meta">
-					<span class="pull-left"><i class="glyphicon glyphicon-time"></i> {{ object.created_at }}</span>
-					<span class="pull-right"><i class="glyphicon glyphicon-user"></i> {{ object.signature|default:_("Anonymous") }}</span>
+					<span class="pull-left"><i class="glyphicon glyphicon-time"></i> {{ post.created_at }}</span>
+					<span class="pull-right"><i class="glyphicon glyphicon-user"></i> {{ post.signature|default:_("Anonymous") }}</span>
 				</div>
 			</div>
 		</a>
 	</div>
 	<nav class="navbar navbar-fixed-bottom navbar-default navbar-justified">
 		<ul class="nav navbar-nav">
-			<li class="prev-button {% if not object.prev_post %}disabled{% endif %}">
-				<a {% if object.prev_post %}href="{% url 'post' object.prev_post.pool.id object.prev_post.id %}"{% endif %} id="go-prev"><span aria-hidden="true">&larr;</span>&nbsp;{% trans "Previous" %}</a>
+			<li class="prev-button {% if not prev_post %}disabled{% endif %}">
+				<a {% if prev_post %}href="{% url 'post' prev_post.pool.id prev_post.id %}"{% endif %} id="go-prev"><span aria-hidden="true">&larr;</span>&nbsp;{% trans "Previous" %}</a>
 			</li>
 			
-			<li><a href="{% url 'pool' object.pool.id %}">{{ object.pool.name }}</a></li>
+			<li><a href="{% url 'pool' pool.id %}">{{ pool.name }}</a></li>
 			
-			{% with object.next_post as p %}
+			{% with next_post as p %}
 				<li class="next-button {% if not p %}disabled{% endif %}">
-					<a {% if object.next_post %}href="{% url 'post' object.next_post.pool.id object.next_post.id %}"{% endif %} id="go-next">{% trans "Next" %}&nbsp;<span aria-hidden="true">&rarr;</span></a>
+					<a {% if next_post %}href="{% url 'post' next_post.pool.id next_post.id %}"{% endif %} id="go-next">{% trans "Next" %}&nbsp;<span aria-hidden="true">&rarr;</span></a>
 				</li>
 			{% endwith %}
 		</ul>
