You can now upload images, yay

--- a/alboard2/alboard2/static/style.css
+++ b/alboard2/alboard2/static/style.css
@@ -1,5 +1,6 @@
 body {
 	padding-top: 60px;
+	padding-bottom: 20px;
 }
 body.has-bottom-bar {
 	padding-bottom: 40px;
@@ -46,6 +47,12 @@ body.has-bottom-bar {
 }
 .thumbnail .meta {
 	font-size: 75%;
+}
+
+.btn-flat {
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	border-radius: 0;
 }
 
 
