--- a/alboard2/alboard2/templates/booru/pool_form.html
+++ b/alboard2/alboard2/templates/booru/pool_form.html
@@ -1,13 +1,6 @@
 {% extends 'base.html' %}
-{% load bootstrap3 i18n %}
+{% load crispy_forms_tags i18n %}
 {% block title %}{% if pool %}{% trans "Edit Event" %}{% else %}{% trans "New Event" %}{% endif %}{% endblock %}
 {% block content %}
-	<form action="." method="POST" class="form form-horizontal">
-		{% csrf_token %}
-		{% bootstrap_form form layout='horizontal' %}
-		
-		{% buttons %}
-			<button type="submit" class="btn btn-primary">{% if pool %}{% trans "Save" %}{% else %}{% trans "Create" %}{% endif %}</button>
-		{% endbuttons %}
-	</form>
+	{% crispy form %}
 {% endblock %}
