Account button in the navbar

--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 staticfiles compress flatpages i18n %}
+{% load bootstrap3 staticfiles compress flatpages account i18n %}
 {% get_flatpages for user as flatpages %}
 {% regroup booru_pools by start_date.year as year_pools %}
 <!DOCTYPE html>
@@ -47,6 +47,19 @@
 					{% empty %}
 						<li><a href="{% url 'pool-new' %}">{% trans "New Event" %}</a></li>
 					{% endfor %}
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					{% if user.is_authenticated %}
+						<li class="dropdown {% if '/accounts/' in request.path %}active{% endif %}">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{% user_display user %} <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="{% url 'account_profile' %}">Profile</a></li>
+								<li><a href="{% url 'account_logout' %}">Log out</a></li>
+							</ul>
+						</li>
+					{% else %}
+						<li><a href="{% url 'account_login' %}">{% trans "Log in" %}</a></li>
+					{% endif %}
 				</ul>
 			</div>
 		</div>
