--- a/alboard2/alboard2/templates/account/login.html
+++ b/alboard2/alboard2/templates/account/login.html
@@ -9,8 +9,8 @@
 			</div>
 			<div class="panel-body">
 				<p>
-					<a class="btn btn-block btn-lg ext-facebook" href="{% provider_login_url 'facebook' method='oauth2' %}">Facebook</a>
-					<a class="btn btn-block btn-lg ext-google" href="{% provider_login_url 'google' %}">Google</a>
+					<a class="btn btn-block btn-lg ext-facebook" href="{% provider_login_url 'facebook' method='oauth2' next=request.GET.next %}">Facebook</a>
+					<a class="btn btn-block btn-lg ext-google" href="{% provider_login_url 'google' next=request.GET.next %}">Google</a>
 				</p>
 				<p class="text-center small">
 					<a class="text-muted" href="{% url 'account_login_local' %}{% if request.GET.next %}?next={{ request.GET.next }}{% endif %}">{% trans "Don't have either?" %}</a>
