--- a/alboard2/alboard2/templates/booru/post_detail.html
+++ b/alboard2/alboard2/templates/booru/post_detail.html
@@ -11,7 +11,12 @@
 					{{ post.description|markdown|default:"<p></p>" }}
 				</div>
 				<div class="meta">
-					<span class="pull-left"><i class="glyphicon glyphicon-time"></i> {{ post.created_at }}</span>
+					<span class="pull-left">
+						<i class="glyphicon glyphicon-tags"></i>&nbsp;
+						{% for tag in post.tags.names %}
+							{% if not forloop.first %}, {% endif %}{{ tag }}{% empty %}<span class="text-muted">No Tags</span>
+						{% endfor %}
+					</span>
 					<span class="pull-right"><i class="glyphicon glyphicon-user"></i> {{ post.signature|default:_("Anonymous") }}</span>
 				</div>
 			</div>
