No pointless highlight on the detail page

--- a/alboard2/alboard2/static/style.less
+++ b/alboard2/alboard2/static/style.less
@@ -54,7 +54,7 @@ body {
 	border: 1px solid #ccc;
 	border-radius: 0;
 	
-	&:hover {
+	&a&:hover {
 		border: 1px solid #333;
 		text-decoration: none;
 	}
