--- a/alboard2/alboard2/templates/booru/post_detail.html
+++ b/alboard2/alboard2/templates/booru/post_detail.html
@@ -4,7 +4,7 @@
 {% block body_class %}has-bottom-bar{% endblock %}
 {% block content %}
 	<div class="col-xs-12">
-		<a class="thumbnail">
+		<div class="thumbnail">
 			<img src="{{ post.image.url }}" />
 			<div class="caption clearfix">
 				<div class="description">
@@ -20,7 +20,7 @@
 					<span class="pull-right"><i class="glyphicon glyphicon-user"></i> {{ post.signature|default:_("Anonymous") }}</span>
 				</div>
 			</div>
-		</a>
+		</div>
 	</div>
 	<nav class="navbar navbar-fixed-bottom navbar-default navbar-justified">
 		<ul class="nav navbar-nav">
