--- a/alboard2/alboard2/static/style.less
+++ b/alboard2/alboard2/static/style.less
@@ -54,13 +54,31 @@ body {
 	border: 1px solid #ccc;
 	border-radius: 0;
 	
-	&a&:hover {
+	img {
+		max-width: 100%;
+	}
+	
+	&:hover {
 		border: 1px solid #333;
 		text-decoration: none;
 	}
-}
-
-.thumbnail {
+	
+	.image-wrapper {
+		position: relative;
+	}
+	
+	.edit-button {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		opacity: 0.2;
+		transition: opacity 0.5s;
+		
+		&:hover {
+			opacity: 0.8;
+		}
+	}
+	
 	.description {
 		margin-bottom: 25px;
 	}
