--- a/alboard2/alboard2/templates/booru/post_detail.html
+++ b/alboard2/alboard2/templates/booru/post_detail.html
@@ -5,7 +5,10 @@
 {% block content %}
 	<div class="col-xs-12">
 		<div class="thumbnail">
-			<img src="{{ post.image.url }}" />
+			<div class="image-wrapper">
+				<img src="{{ post.image.url }}" />
+				<a class="btn btn-default edit-button" href="{% url 'post-edit' pool.id post.id %}"><i class="glyphicon glyphicon-edit"></i></a>
+			</div>
 			<div class="caption clearfix">
 				<div class="description">
 					{{ post.description|markdown|default:"<p></p>" }}
