--- a/alboard2/alboard2/templates/booru/post_detail.html
+++ b/alboard2/alboard2/templates/booru/post_detail.html
@@ -3,24 +3,26 @@
 {% block title %}{% trans "Picture" %} | {{ pool.name }}{% endblock %}
 {% block body_class %}has-bottom-bar{% endblock %}
 {% block content %}
-	<div class="col-xs-12">
-		<div class="thumbnail">
-			<div class="image-wrapper">
-				<img src="{{ post.image.url }}" />
-				<a class="btn btn-default edit-button" href="{% url 'post-edit' pool.id post.id %}"><i class="glyphicon glyphicon-edit"></i></a>
-			</div>
-			<div class="caption clearfix">
-				<div class="description">
-					{{ post.description|markdown|default:"<p></p>" }}
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="thumbnail">
+				<div class="image-wrapper">
+					<img src="{{ post.image.url }}" />
+					<a class="btn btn-default edit-button" href="{% url 'post-edit' pool.id post.id %}"><i class="glyphicon glyphicon-edit"></i></a>
 				</div>
-				<div class="meta">
-					<span class="pull-left">
-						<i class="glyphicon glyphicon-tags"></i>&nbsp;
-						{% for tag in post.tags.names %}
-							{% if not forloop.first %}, {% endif %}{{ tag }}{% empty %}<span class="text-muted">No Tags</span>
-						{% endfor %}
-					</span>
-					<span class="pull-right"><i class="glyphicon glyphicon-user"></i> {{ post.signature|default:_("Anonymous") }}</span>
+				<div class="caption clearfix">
+					<div class="description">
+						{{ post.description|markdown|default:"<p></p>" }}
+					</div>
+					<div class="meta">
+						<span class="pull-left">
+							<i class="glyphicon glyphicon-tags"></i>&nbsp;
+							{% for tag in post.tags.names %}
+								{% if not forloop.first %}, {% endif %}{{ tag }}{% empty %}<span class="text-muted">No Tags</span>
+							{% endfor %}
+						</span>
+						<span class="pull-right"><i class="glyphicon glyphicon-user"></i> {{ post.signature|default:_("Anonymous") }}</span>
+					</div>
 				</div>
 			</div>
 		</div>
