Dropped django-bootstrap3
django-bower and django-crispy-forms now do everything it used to do

--- a/alboard2/alboard2/static/style.less
+++ b/alboard2/alboard2/static/style.less
@@ -22,6 +22,14 @@ body {
 	}
 }
 
+.alert {
+	padding: 5px 10px;
+	
+	&.alert-dismissable, &.alert-dismissible {
+		padding-right: 30px;
+	}
+}
+
 .navbar-justified .navbar-nav {
 	margin: 0 auto;
 	display: table;
