Let's just stick to jQuery UI's base theme

--- a/alboard2/alboard2/templates/booru/post_form.html
+++ b/alboard2/alboard2/templates/booru/post_form.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block after_head %}
 	<link rel="stylesheet" href="{% static 'tag-it/css/jquery.tagit.css' %}" />
-	<link rel="stylesheet" href="{% static 'tag-it/css/tagit.ui-zendesk.css' %}" />
+	<link rel="stylesheet" href="{% static 'jquery-ui/themes/base/all.css' %}" />
 {% endblock %}
 {% block after_body %}
 	<script src="{% static 'jquery-ui/jquery-ui.min.js' %}"></script>
