--- a/alboard2/alboard2/templates/booru/post_list.html
+++ b/alboard2/alboard2/templates/booru/post_list.html
@@ -2,18 +2,22 @@
 {% load thumbnail i18n %}
 {% block title %}{% trans "Latest Pictures" %}{% endblock %}
 {% block content %}
-	<div class="row">
-	{% for post in posts %}
-		<div class="col-xs-6 col-sm-3 col-md-2">
-			<a href="{{ post.get_absolute_url }}" class="thumbnail">
-				{% thumbnail post.image "200x200" crop='center' as thumb %}
-					<img src="{{ thumb.url }}" />
-				{% empty %}
-				{% endthumbnail %}
-			</a>
+	{% regroup posts by created_at.date as dates %}
+	{% for date in dates %}
+		<h2>{{ date.grouper }}</h2>
+		<div class="row">
+		{% for post in date.list %}
+			<div class="col-xs-6 col-sm-3 col-md-2">
+				<a href="{{ post.get_absolute_url }}" class="thumbnail">
+					{% thumbnail post.image "200x200" crop='center' as thumb %}
+						<img src="{{ thumb.url }}" />
+					{% empty %}
+					{% endthumbnail %}
+				</a>
+			</div>
+		{% endfor %}
 		</div>
 	{% endfor %}
-	</div>
 	{% if is_paginated %}
 		<nav>
 			<ul class="pager">
