--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -25,7 +25,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="{{ SITE_URL }}">{{ site.name }}</a>
+				<a class="navbar-brand" href="{% url 'posts' %}">{{ site.name }}</a>
 			</div>
 			
 			<div class="collapse navbar-collapse" id="navbar-collapse-1">
