Show which event things are in too

--- a/alboard2/alboard2/static/style.less
+++ b/alboard2/alboard2/static/style.less
@@ -66,6 +66,16 @@ body {
 		max-width: 100%;
 	}
 	
+	.caption-compact {
+		padding: 5px;
+		
+		p {
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+	
 	&:hover {
 		border: 1px solid #333;
 		text-decoration: none;
