--- a/alboard2/alboard2/templates/booru/pool_detail.html
+++ b/alboard2/alboard2/templates/booru/pool_detail.html
@@ -14,6 +14,6 @@
 	{% endfor %}
 	
 	<div class="col-md-12">
-		<a href="{% url 'upload' pid=pool.id %}" class="btn btn-flat btn-block btn-lg">Upload</a>
+		<a href="{% url 'pool-upload' pid=pool.id %}" class="btn btn-flat btn-block btn-lg">Upload</a>
 	</div>
 {% endblock %}
