--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -55,8 +55,8 @@
 						<li class="dropdown {% if '/accounts/' in request.path %}active{% endif %}">
 							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ user.username }} <span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="{% url 'account_profile' %}">Profile</a></li>
-								<li><a href="{% url 'account_logout' %}?next={{ request.path }}">Log out</a></li>
+								<li><a href="{% url 'account_profile' %}">{% trans "Update Profile" %}</a></li>
+								<li><a href="{% url 'account_logout' %}?next={{ request.path }}">{% trans "Log out" %}</a></li>
 							</ul>
 						</li>
 					{% else %}
