--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -53,7 +53,7 @@
 					<li><a href="{% if pool %}{% url 'pool-upload' pool.id %}{% else %}{% url 'upload' %}{% endif %}">{% trans "Upload" %}</a></li>
 					{% if user.is_authenticated %}
 						<li class="dropdown {% if '/accounts/' in request.path %}active{% endif %}">
-							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ user.username }} <span class="caret"></span></a>
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{% if user.first_name %}{{ user.first_name }} {{ user.last_name }}{% else %}{{ user.username }}{% endif %} <span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="{% url 'account_profile' %}">{% trans "Update Profile" %}</a></li>
 								<li><a href="{% url 'account_logout' %}?next={{ request.path }}">{% trans "Log out" %}</a></li>
