--- a/alboard2/alboard2/templates/booru/pool_detail.html
+++ b/alboard2/alboard2/templates/booru/pool_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.html'|pjax:request %}
 {% load thumbnail markdown_deux_tags %}
 {% block title %}{{ pool.name }}{% endblock %}
 {% block content %}
