--- a/alboard2/alboard2/templates/booru/post_list.html
+++ b/alboard2/alboard2/templates/booru/post_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.html'|pjax:request %}
 {% load thumbnail i18n %}
 {% block title %}{% trans "Latest Pictures" %}{% endblock %}
 {% block content %}
