--- a/alboard2/alboard2/templates/account/login.html
+++ b/alboard2/alboard2/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html"|pjax:request %}
 {% load crispy_forms_tags i18n %}
 {% block title %}{% trans "Log in" %}{% endblock %}
 {% block content %}
