--- a/alboard2/alboard2/templates/account/login_local.html
+++ b/alboard2/alboard2/templates/account/login_local.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html"|pjax:request %}
 {% load crispy_forms_tags i18n %}
 {% block content %}
 	<div class="col-md-6 col-md-offset-3">
