--- a/alboard2/alboard2/templates/base.html
+++ b/alboard2/alboard2/templates/base.html
@@ -1,6 +1,4 @@
-{% load staticfiles compress flatpages i18n %}
-{% get_flatpages for user as flatpages %}
-{% regroup booru_pools by start_date.year as year_pools %}
+{% load staticfiles compress %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,75 +11,30 @@
 	<link rel="stylesheet" type="text/less" href="{% static 'style.less' %}" />
 	{% endcompress %}
 	
-	{% block after_head %}{% endblock %}
-</head>
-<body class="{% block body_class %}{% endblock %}">
-	<nav class="navbar navbar-fixed-top navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-					<span class="sr-only">{% trans "Toggle navigation" %}</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="{% url 'posts' %}">{{ site.name }}</a>
-			</div>
-			
-			<div class="collapse navbar-collapse" id="navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li {% if request.path == '/' %}class="active"{% endif %}><a href="{% url 'posts' %}">{% trans "Home" %}</a></li>
-					{% for page in flatpages %}
-						<li {% if request.path == page.url %}class="active"{% endif %}><a href="{{ page.url }}">{{ page.title }}</a></li>
-					{% endfor %}
-					{% for year in year_pools %}
-						<li class="dropdown {% if active_year == year.grouper %}active{% endif %}">
-							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ year.grouper }} <span class="caret"></span></a>
-							<ul class="dropdown-menu" role="menu">
-								{% for pool in year.list %}
-									<li {% if object == pool %}class="active"{% endif %}><a href="{{ pool.get_absolute_url }}">{{ pool.name }} <small {% if object != pool %}class="text-muted"{% endif %}>({{ pool.start_date }}{% if pool.start_date != pool.end_date %} - {{ pool.end_date }}{% endif %})</small></a></li>
-								{% endfor %}
-								<li class="divider"></li>
-								<li><a href="{% url 'pool-new' %}">{% trans "New Event" %}</a></li>
-							</ul>
-						</li>
-					{% empty %}
-						<li><a href="{% url 'pool-new' %}">{% trans "New Event" %}</a></li>
-					{% endfor %}
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="{% if pool %}{% url 'pool-upload' pool.id %}{% else %}{% url 'upload' %}{% endif %}">{% trans "Upload" %}</a></li>
-					{% if user.is_authenticated %}
-						<li class="dropdown {% if '/accounts/' in request.path %}active{% endif %}">
-							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{% if user.first_name %}{{ user.first_name }} {{ user.last_name }}{% else %}{{ user.username }}{% endif %} <span class="caret"></span></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="{% url 'account_profile' %}">{% trans "Update Profile" %}</a></li>
-								<li><a href="{% url 'account_logout' %}?next={{ request.path }}">{% trans "Log out" %}</a></li>
-							</ul>
-						</li>
-					{% else %}
-						<li><a href="{% url 'account_login' %}?next={{ request.path }}">{% trans "Log in" %}</a></li>
-					{% endif %}
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<div class="container">
-		{% if messages %}
-			{% for message in messages %}
-			<div class="alert alert-dismissible alert-{{ message.tags|default:'info' }}" role="alert">
-				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				{{ message }}
-			</div>
-			{% endfor %}
-		{% endif %}
-		{% block content %}{% endblock %}
-	</div>
-	
 	{% compress js %}
 	<script src="{% static 'jquery/dist/jquery.js' %}"></script>
 	<script src="{% static 'bootstrap/dist/js/bootstrap.js' %}"></script>
+	<script src="{% static 'jquery-pjax/jquery.pjax.js' %}"></script>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$(document).pjax('a', 'body');
+		});
+	</script>
 	{% endcompress %}
+	
+	{% block after_head %}{% endblock %}
+</head>
+<body class="{% block body_class %}{% endblock %}">
+	{% include "_navbar.html" %}
+	<div class="container">
+		{% for message in messages %}
+		<div class="alert alert-dismissible alert-{{ message.tags|default:'info' }}" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			{{ message }}
+		</div>
+		{% endfor %}
+		{% block content %}{% endblock %}
+	</div>
 	
 	{% block after_body %}{% endblock %}
 </body>
