--- a/alboard2/alboard2/templates/booru/pool_form.html
+++ b/alboard2/alboard2/templates/booru/pool_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.html'|pjax:request %}
 {% load crispy_forms_tags i18n %}
 {% block title %}{% if pool %}{% trans "Edit Event" %}{% else %}{% trans "New Event" %}{% endif %}{% endblock %}
 {% block content %}
