--- a/alboard2/alboard2/templates/flatpages/default.html
+++ b/alboard2/alboard2/templates/flatpages/default.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.html'|pjax:request %}
 {% load markdown_deux_tags %}
 {% block title %}{{ flatpage.title }}{% endblock %}
 {% block content %}
